# python-ojmicroline-thermostat

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bandit.yaml  config_example.py  mypy.ini  pyproject.toml  test_output.py
.github/: CODEOWNERS
.github/private-workflows/: ci.yaml  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yaml  codeql.yaml  dependabot.yml  draft-release.yaml  linting.yaml  release.yaml  sync-labels.yaml  tests.yaml  typing.yaml
ojmicroline_thermostat/: __init__.py  api.py  const.py  exceptions.py  ojmicroline.py  wd5.py  wg4.py  wg5.py
ojmicroline_thermostat/models/: __init__.py  schedule.py  thermostat.py
ojmicroline_thermostat/requests/: __init__.py  group.py  update_group_request.py
tests/: __init__.py  ruff.toml  test_amsterdam.py  test_model_schedule.py  test_model_thermostat.py  test_ojmicroline.py  test_request_update_group.py  test_wd5.py  test_wd5_update.py  test_wg4.py  test_wg4_update.py  test_wg5.py  test_wg5_update.py
tests/fixtures/: energy.json  group_contents.json  schedule.json  single_thermostat.json  wg4_group.json  wg4_thermostat.json  wg5_building_tree.json  wg5_buildings.json  wg5_energy.json  wg5_schedule.json  wg5_thermostat_control.json  wg5_thermostat_detail.json  wg5_token.json
