[tool.poetry]
name = "ojmicroline-thermostat"
version = "1.1.3"
description = "Asynchronous Python client controlling an OJ Microline Thermostat."
authors = ["Robbin Janssen <robbinjanssen@gmail.com>"]
maintainers = ["Robbin Janssen <robbinjanssen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/robbinjanssen/python-ojmicroline-thermostat"
repository = "https://github.com/robbinjanssen/python-ojmicroline-thermostat"
documentation = "https://github.com/robbinjanssen/python-ojmicroline-thermostat"
keywords = ["async", "client", "thermostat", "ojmicroline", "thermostat"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "ojmicroline_thermostat" }
]

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
python = "^3.9"
yarl = ">=1.6.0"

[tool.poetry.group.dev.dependencies]
aresponses = "^2.1.6"
bandit = "^1.7.4"
black = ">=22.12,<24.0"
blacken-docs = "^1.12.1"
codespell = "^2.2.2"
coverage = {version = "^7.0.4", extras = ["toml"]}
darglint = "^1.8.1"
flake8 = ">=5.0.4,<7.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = ">=22.12.6,<24.0.0"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.4.0"
flake8-markdown = ">=0.4,<0.6"
flake8-simplify = ">=0.19.3,<0.21.0"
isort = "^5.11.4"
mypy = ">=0.991,<1.6"
pre-commit = ">=2.21,<4.0"
pre-commit-hooks = "^4.4.0"
pylint = "^2.15.10"
pytest = "^7.2.0"
pytest-asyncio = ">=0.20.3,<0.22.0"
pytest-cov = "^4.0.0"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
vulture = "^2.7"
yamllint = "^1.28.0"
types-cachetools = "^5.2.1"
freezegun = "^1.2.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/robbinjanssen/python-ojmicroline-thermostat/issues"
Changelog = "https://github.com/robbinjanssen/python-ojmicroline-thermostat/releases"

[tool.black]
target-version = ['py39']

[tool.coverage.paths]
source = ["ojmicroline_thermostat"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["ojmicroline_thermostat"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = 3.9

[[tool.mypy.overrides]]
module = [
  "tests/*"
]
ignore_errors = true

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false # thanks backoff :(
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# No incremental mode
cache_dir = "/dev/null"

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.vulture]
min_confidence = 80
paths = ["ojmicroline_thermostat"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
